feat: importa metadados e multiplos sentidos
